add angular filters
add filters for owner, body, and category

Co-authored-by: Harry <lv000013@morris.umn.edu>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,14 @@
       "html"
     ],
     "cSpell.words": [
+      "alwin",
+      "beggin",
       "Bson",
       "compat",
       "CSCI",
       "dont",
+      "Headin",
+      "howlin",
       "Ibmers",
       "invalidemail",
       "invalidrole",
@@ -22,9 +26,11 @@
       "mongoseed",
       "notanumber",
       "OHMNET",
+      "Revvin",
       "sams",
       "Servlet",
       "sidenav",
+      "spreadin",
       "testid",
       "todos",
       "unsub"
